# Perfect

./: .gitignore  ARCHITECTURE.md  README.md  index.html  metadata.json  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.claude/: settings.local.json
examples/: .gitignore  OFFLINE_SETUP.md  requirements.txt  setup_offline.bat  setup_offline.sh
examples/perfect_client/: CLIENT_ARCHITECTURE.md  PYTHON_CLIENT.md  __init__.py  api.py  executor.py  pyproject.toml  sdk.py
examples/perfect_client/perfect/: api.py  executor.py  sdk.py
examples/perfect_client/tests/: test_api.py  test_sdk.py
examples/workflows/: example_flows.py
offline_setup/: NODE_OFFLINE_SETUP.md  README.md  download_node_packages.sh  setup_node_offline.bat  setup_node_offline.sh
scripts/: README.md  start.bat  start.sh  start_from_windows.bat
server/: clients.json  index.ts
server/database/: db.test.ts  db.ts
server/engine/: FlowEngine.test.ts  FlowEngine.ts
server/engine/services/: PerformanceMonitor.test.ts  PerformanceMonitor.ts
server/routes/: api.test.ts  clientRoutes.ts  engineRoutes.ts
server/types/: index.ts
server/utils/: reportGenerator.test.ts  reportGenerator.ts
src/: App.test.tsx  App.tsx  index.css  main.tsx
src/components/: ActiveRunCard.test.tsx  ActiveRunCard.tsx  ClientSelector.test.tsx  ClientSelector.tsx  HistoryPanel.test.tsx  HistoryPanel.tsx  PerfectLogo.tsx  PerformanceChart.test.tsx  PerformanceChart.tsx  PerformanceHistoryModal.test.tsx  PerformanceHistoryModal.tsx  StatisticsWindow.test.tsx  StatisticsWindow.tsx  StatusComponents.test.tsx  StatusComponents.tsx  TableModal.test.tsx  TableModal.tsx  TagBadges.tsx  TaskRow.test.tsx  TaskRow.tsx  TimeSeriesChart.test.tsx  TimeSeriesChart.tsx
src/components/dialogs/: ConfirmDialog.test.tsx  ConfirmDialog.tsx
src/constants/: index.ts
src/hooks/: useAnimatedProgress.test.ts  useAnimatedProgress.ts  useClientActions.ts  useClientConfigs.ts  useClientStatus.ts  useFlowRuns.ts  useLocalStorage.test.ts  useLocalStorage.ts  useModalAnimation.test.ts  useModalAnimation.ts
src/types/: index.ts
src/utils/: audioUtils.ts  colorUtils.test.ts  colorUtils.ts  filterUtils.test.ts  filterUtils.ts  formatUtils.test.ts  formatUtils.ts  progressUtils.test.ts  progressUtils.ts  themeUtils.ts
(+2 files in other folders)
